fdo#53032 - Use the right mark area to undo paste of RTF.

Change-Id: Iee0521e4f7851f5b51cf6ab7a973bf8b46fb09f5